--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,33 +1,42 @@
-/* body { */
-/* background-color: cadetblue; */
-/* } */
+body {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+
+    /* background-color: antiquewhite; */
+}
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 10px;
+    padding: 0px 30px 0px 30px;
     /* color: rgb(19, 107, 127); */
     font-family: 'Roboto', sans-serif;
-    width: 100%;
+    width: auto;
 
     position: sticky;
     top: 0;
     z-index: 1000;
 
     color: white;
-    background: rgba(255, 255, 255, 0.1);
-    /* Transparansi */
+    /* background: rgba(255, 255, 255, 0.1); */
+    background-color: rgb(27, 25, 22);
     /* padding: 40px 60px; */
     /* border-radius: 15px; */
     backdrop-filter: blur(10px);
-    /* Efek blur untuk Glassmorphism */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
 }
 
 header .logo img {
-    height: 40px;
+    height: 50px;
+    width: auto;
 }
 
 nav ul {
@@ -48,4 +57,36 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #ecf0f1;
+}
+
+.welcome-container {
+    margin-top: 80px;
+}
+
+.message {
+    background-color: #f8d7da;
+    padding: 15px;
+    border-radius: 5px;
+    color: #721c24;
+}
+
+.form-link {
+    margin-top: 20px;
+}
+
+.logout-button {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+footer {
+    position: relative;
+
+    background-color: #f1f1f1;
+    padding: 20px 0;
+    text-align: center;
 }
