--- a/public/css/register.css
+++ b/public/css/register.css
@@ -445,3 +445,30 @@ input[type=checkbox]:not(old):checked+label>span:before {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+#errorModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+}
+
+#closeModal {
+  float: right;
+  cursor: pointer;
+  font-size: 20px;
+}
