--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -17,11 +17,6 @@ body {
     height: 100vh;
     /* background-color: #1c1a1a; */
 
-    background-image: url('{{ asset(" images/wp1.png") }}');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
 
 }
 
@@ -31,7 +26,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
-    color: rgb(19, 107, 127);
     font-family: 'Roboto', sans-serif;
     width: 100%;
 
@@ -39,19 +33,15 @@ header {
     top: 0;
     z-index: 1000;
 
-    color: white;
-    background: rgba(255, 255, 255, 0.1);
-    /* Transparansi */
-    /* padding: 40px 60px; */
-    /* border-radius: 15px; */
+    color: rgb(24, 112, 100);
+    background-color: white;
     backdrop-filter: blur(10px);
-    /* Efek blur untuk Glassmorphism */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
 }
 
-header .logo img {
-    height: 50px;
+.logo img {
+    width: 50px;
     height: auto;
 }
 
@@ -66,13 +56,13 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(24, 112, 100);
     font-weight: bold;
     transition: color 0.3s;
 }
 
 nav ul li a:hover {
-    color: #ecf0f1;
+    color: #24abcd;
 }
 
 main {
@@ -103,7 +93,9 @@ footer {
 
     height: 550px;
     width: 100%;
-
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 
     padding: 200px 100px 100px 100px;
     margin-top: 0;
@@ -194,7 +186,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: 12px;
     flex-shrink: 0;
 
     color: white;
