Fitur prediksi cuaca bekerja dengan baik, perlu melengkapi untu semua gunung dan jalur

--- a/public/css/mountainWeather.css
+++ b/public/css/mountainWeather.css
@@ -36,7 +36,7 @@ table td {
 }
 
 table th {
-    background-color: #1c7d77;
+    background-color: #309b94;
     color: #fff;
     font-weight: bold;
     font-size: 12px;
@@ -53,7 +53,7 @@ table th {
     width: 80px;
     height: 30px;
 
-    background-color: #1c7d77;
+    background-color: #848382;
     color: white;
     border: none;
     border-radius: 5px;
